test/parser/should_fail/expr2.souc.bad
import import

main() = do
	print x <> huaens <>
end main
